gateway-api-training/code/tag07/refgrant-backend.yaml
# Payments erlaubt: HTTPRoutes aus shop dürfen auf Service payments-api zeigen
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: shop-to-payments-api
  namespace: payments
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: shop
  to:
    - group: ""
      kind: Service
      name: payments-api
