gateway-api-training/code/tag07/refgrant-secret.yaml
# Shop erlaubt: Gateways aus infra dürfen das Secret shop-own-tls nutzen
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: infra-gateway-to-shop-cert
  namespace: shop
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: infra
  to:
    - group: ""
      kind: Secret
      name: shop-own-tls
