gateway-api-training/code/tag07/checkout-route.yaml
# Shop-Route mit Backend im Namespace payments
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: checkout
  namespace: shop
spec:
  parentRefs:
    - name: web
      namespace: infra
      sectionName: https-shop
  rules:
    - matches:
        - path: {type: PathPrefix, value: /checkout}
      backendRefs:
        - name: payments-api
          namespace: payments
          port: 80
