gateway-api-training/code/tag07/listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: promo
  namespace: shop
spec:
  parentRefs:
    - name: shop-promo
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: https-promo
  rules:
    - backendRefs:
        - name: shop-v2
          port: 80
